@@ -109,6 +109,12 @@ If set to "true", then the clients will warn the user if the issue text box is
 left empty. But it must not block the commit, only give the user a chance to
 enter an issue number in case (s)he forgot it.
 
+name  : bugtraq:append
+value : "true" or "false"
+If set to "false", then the bugtraq:message part is inserted at the top of
+the log message, if "yes" or not set, then it's appended to the log message at
+the bottom.
+
 Please note:
 - All property names and values must be properly UTF8 encoded. The client should
   take care of that when setting the properties.
