@@ -115,6 +115,7 @@ Global
 		Changelog.txt = Changelog.txt
 		Debug-Hints.txt = Debug-Hints.txt
 		TortoiseShell\Documentation.h = TortoiseShell\Documentation.h
+		..\doc\issuetrackers.txt = ..\doc\issuetrackers.txt
 		README.txt = README.txt
 		TortoiseSVNSetup\Setup.wxs = TortoiseSVNSetup\Setup.wxs
 		translations.txt = translations.txt
