@@ -316,6 +316,7 @@ BEGIN
     IDS_TT_BQWARNNOISSUE    "tsvn:warnifnoissue\nSet to ""yes"" if a warning shall be shown when no issue is entered in the commit dialog."
     IDS_TT_TSVNLOGFILELISTENGLISH 
                             "tsvn:logfilelistenglish\nSet to ""false"" if you don't want the list of changed files to be pasted in english\nin the commit dialog."
+    IDS_TT_BQAPPEND         "bugtraq:append\nSet to ""false"" if you want the bugtracking ID to be inserted at the top of the\nlog message. The default is ""true"" which means the bugtracking ID\nis appended to the log message."
 END
 
 #endif    // English (U.S.) resources
